--- a/compras/src/main/resources/application.yml
+++ b/compras/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/graphql_compras?createDatabaseIfNotExist=true&serverTimeZone=UTC
+    url: jdbc:mysql://localhost:3306/graphql_compras?createDatabaseIfNotExist=true&serverTimeZone=UTC
     username: root
     password: root
 
@@ -15,7 +15,14 @@ spring:
   flyway:
     locations: classpath:db/migration
 
-#logging:
+
+
+  graphql:
+    graphiql:
+      enabled: true
+      path: /graphiql
+
+
 #  pattern:
 #    console: %d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 #    level:
